--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,24 +1,30 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-#crx-wld-root *,
-#crx-wld-root *::before,
-#crx-wld-root *::after {
+#crx-wld-root-bottom,
+#crx-wld-root-top > *,
+#crx-wld-root-bottom,
+#crx-wld-root-top > *::before,
+#crx-wld-root-bottom,
+#crx-wld-root-top > *::after {
   box-sizing: border-box;
 }
 
 /*
     2. Remove default margin
   */
-#crx-wld-root * {
+#crx-wld-root-bottom,
+#crx-wld-root-top > * {
   margin: 0;
 }
 
 /*
     3. Allow percentage-based heights in the application
   */
-#crx-wld-root html,
-#crx-wld-root body {
+#crx-wld-root-bottom,
+#crx-wld-root-top > html,
+#crx-wld-root-bottom,
+#crx-wld-root-top > body {
   height: 100%;
 }
 
@@ -27,7 +33,8 @@
     4. Add accessible line-height
     5. Improve text rendering
   */
-#crx-wld-root body {
+#crx-wld-root-bottom,
+#crx-wld-root-top > body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -35,11 +42,16 @@
 /*
     6. Improve media defaults
   */
-#crx-wld-root img,
-#crx-wld-root picture,
-#crx-wld-root video,
-#crx-wld-root canvas,
-#crx-wld-root svg {
+#crx-wld-root-bottom,
+#crx-wld-root-top > img,
+#crx-wld-root-bottom,
+#crx-wld-root-top > picture,
+#crx-wld-root-bottom,
+#crx-wld-root-top > video,
+#crx-wld-root-bottom,
+#crx-wld-root-top > canvas,
+#crx-wld-root-bottom,
+#crx-wld-root-top > svg {
   display: block;
   max-width: 100%;
 }
@@ -47,29 +59,41 @@
 /*
     7. Remove built-in form typography styles
   */
-#crx-wld-root input,
-#crx-wld-root button,
-#crx-wld-root textarea,
-#crx-wld-root select {
+#crx-wld-root-bottom,
+#crx-wld-root-top > input,
+#crx-wld-root-bottom,
+#crx-wld-root-top > button,
+#crx-wld-root-bottom,
+#crx-wld-root-top > textarea,
+#crx-wld-root-bottom,
+#crx-wld-root-top > select {
   font: inherit;
 }
 
 /*
     8. Avoid text overflows
   */
-#crx-wld-root p,
-#crx-wld-root h1,
-#crx-wld-root h2,
-#crx-wld-root h3,
-#crx-wld-root h4,
-#crx-wld-root h5,
-#crx-wld-root h6 {
+#crx-wld-root-bottom,
+#crx-wld-root-top > p,
+#crx-wld-root-bottom,
+#crx-wld-root-top > h1,
+#crx-wld-root-bottom,
+#crx-wld-root-top > h2,
+#crx-wld-root-bottom,
+#crx-wld-root-top > h3,
+#crx-wld-root-bottom,
+#crx-wld-root-top > h4,
+#crx-wld-root-bottom,
+#crx-wld-root-top > h5,
+#crx-wld-root-bottom,
+#crx-wld-root-top > h6 {
   overflow-wrap: break-word;
 }
 
 /*
     9. Create a root stacking context
   */
-#crx-wld-root {
+#crx-wld-root-bottom,
+#crx-wld-root-top {
   isolation: isolate;
 }
