chore: add todo-comments

--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -1,4 +1,6 @@
-/* Todo: styled-components nutzen  */
+/* Todo: styled-components nutzen? */
+/* Todo: light/dark mode beachten */
+
 .stats {
   color: #999;
 }
